变量定义、复制、运算、比较、逻辑、对象、集合

--- a/example/src/main/resources/templates/home.html
+++ b/example/src/main/resources/templates/home.html
@@ -12,8 +12,10 @@
     <div>
         <ul>
             <li><a target="_blank" href="/value/get">取值 - 2018.06.13</a> </li>
-            <li><a target="_blank" href="/value/get">运算，集合 - 2018.06.14</a> </li>
+            <li><a target="_blank" href="/value/calculate">变量定义、赋值、运算（简单运算、比较、逻辑） - 2018.06.14</a> </li>
+            <li><a target="_blank" href="/value/obj">对象，集合 - 2018.06.14</a> </li>
             <li><a target="_blank" href="/value/get">高级技巧 - 2018.06.15</a> </li>
+            <li><a target="_blank" href="https://www.jianshu.com/p/b1f09db4bcc6">笔记</a> </li>
         </ul>
     </div>
 </center>
